--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="todolist.css">
 </head>
 <body>
-    <p>Todo List</p>
+    <p>Todo List(Write down things we are doing this month)</p>
     <div class="todo-input-grid">
         <input class="js-input input-button" placeholder="Todo-name">
     <input type="date" class="js-duedate due-date-input">
